@@ -38,6 +38,7 @@
 #define PATCHES_DIR "/.pcsx/patches/"
 
 extern gboolean UseGui;
+extern int StatesC;
 char cfgfile[MAXPATHLEN];	/* ADB Comment this out - make a local var, or at least use gchar funcs */
 char cfgfile_basename[MAXPATHLEN];	/* ADB Comment this out - make a local var, or at least use gchar funcs */
 
